fixed mistakes and used mapstruct library + added security but not ready solution

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.liquibase.enabled=true
+token.signing.key=uij5c6tZbvoE/qwXHv7H62vMFnzN1lcmwlQT8FenQBQ=
