--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -3,3 +3,5 @@ databaseChangeLog:
       file: db/changelog/changes/create-recipe-table.sql
   - include:
       file: db/changelog/changes/create-recipe_version-table.sql
+  - include:
+      file: db/changelog/changes/create-users-table.sql
