finally solution COOK RECIPE APP

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/cook_recipe_database
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url={YOUR_DB_URL}
+spring.datasource.username={YOUR_DB_USERNAME}
+spring.datasource.password={YOUR_DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.liquibase.enabled=true
-token.signing.key=uij5c6tZbvoE/qwXHv7H62vMFnzN1lcmwlQT8FenQBQ=
+token.signing.key={YOUR_SECRET_KEY}
