--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>cook-recipe-appilication</artifactId>
+    <artifactId>cook-recipe-application</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>cook-recipe-appilication</name>
-    <description>cook-recipe-appilication</description>
+    <name>cook-recipe-application</name>
+    <description>cook-recipe-application</description>
     <properties>
         <java.version>17</java.version>
         <maven.checkstyle.plugin.version>3.1.1</maven.checkstyle.plugin.version>
